manifests/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map-api
  namespace: map
  labels:
    app: map-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: map-api-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: map-api-app
    spec:
      containers:
        - name: map-api
          image: kaizent/otus_homework:1.0
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
