manifests/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-api-ingress
  namespace: map
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: map-api-service
            port:
              number: 8000
